# GaussianElimination

./: .gitignore  LinEqSys.py  README.md  augmented_matrix.py  image_threshholding.ipynb  pyproject.toml  requirements.txt  test_augmented_matrix.py
.ipynb_checkpoints/: image_threshholding-checkpoint.ipynb
augmented_matrix/: __init__.py  augmented_matrix.py
augmented_matrix.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: __init__.py  augmented_matrix.py
test/: test_augmented_matrix.py
